@@ -11,6 +11,7 @@ Pending Changes
 - Fixed an issue in CmdLoad.cs where it would constantly get stuck on corrupted levels
 - Removed unused files from the source code repository
 - Increased MCForge heartbeat delay to reduce website load
+- Removed buggy block permissions from block.properties (flagbase and odoor_airs)
 
 v4.6.0.1
 - Command thread will no longer be manually aborted, as this can sometimes cause problems closing the socket.
